--- a/src/asciidoc/project/core/constructing_a_transactional_objects_for_java_application.adoc
+++ b/src/asciidoc/project/core/constructing_a_transactional_objects_for_java_application.adoc
@@ -1,6 +1,6 @@
-== Constructing a Transactional Objects for Java application
+= Constructing a Transactional Objects for Java application
 
-=== Development Phases of a ArjunaCore Application
+== Development Phases of a ArjunaCore Application
 
 . First, develop new classes with characteristics like persistence, recoverability, and concurrency control.
 . Then develop the applications that make use of the new classes of objects.
@@ -20,84 +20,30 @@ The application is assumed not to be distributed.
 To allow for distribution, context information must be propagated either implicitly or explicitly.
 ====
 
-=== Queue description
+== Queue description
 
 The queue is a traditional FIFO queue, where elements are added to the front and removed from the back.
 The operations provided by the queue class allow the values to be placed on to the queue (`enqueue`) and to be removed from it (`dequeue`), and values of elements in the queue can also be changed or inspected.
 In this example implementation, an array represents the queue.
 A limit of `QUEUE_SIZE` elements has been imposed for this example.
 
-.Java interface definition of class
+.Java interface definition of class `queue`
 ====
-[source,Java]
+[source,java]
 ----
-public class TransactionalQueue extends LockManager {
-    public TransactionalQueue (Uid uid);
-    public TransactionalQueue ();
-    public void finalize ();
-
-    public void enqueue (int v) throws OverFlow, UnderFlow, QueueError, Conflict;
-    public int dequeue  () throws OverFlow, UnderFlow, QueueError, Conflict;
-
-    public int queueSize ();
-    public int inspectValue (int i) throws OverFlow, UnderFlow, QueueError, Conflict;
-    public void setValue (int i, int v) throws OverFlow, UnderFlow, QueueError, Conflict;
-
-    public boolean save_state (OutputObjectState os, int ObjectType);
-    public boolean restore_state (InputObjectState os, int ObjectType);
-    public String type ();
-
-    // maximum size of the queue
-    public static final int QUEUE_SIZE = 40;
-
-    private int[QUEUE_SIZE] elements;
-    private int numberOfElements;
-}
-
+include::extras/example_queue_class.java[]
 ----
 ====
 
-=== Constructors and finalizers
+== Constructors and finalizers
 
-Using an existing persistent object requires the use of a special constructor that takes the Uid of the persistent object, as shown in link:#example-TransactionalQueue[the transactional queue].
+Using an existing persistent object requires the use of a special constructor that takes the Uid of the persistent object, as shown in <<_example_transactionalqueue>> .
 
-.Transactional queue
-[#example-TransactionalQueue]
+.Class `TransactionalQueue`
 ====
-[source,Java]
+[source,java]
 ----
-public TransactionalQueue (Uid u) {
-    super(u);
-
-    numberOfElements = 0;
-}
-
-// The constructor that creates a new persistent object is similar:
-public TransactionalQueue () {
-    super(ObjectType.ANDPERSISTENT);
-
-    numberOfElements = 0;
-
-    try {
-        AtomicAction A = new AtomicAction();
-
-        // Try to start atomic action
-        A.begin(0);
-
-        // Try to set lock
-        if (setlock(new Lock(LockMode.WRITE), 0) == LockResult.GRANTED) {
-            // Commit
-            A.commit(true);
-        }
-        else
-            // Lock refused so abort the atomic action
-            A.rollback();
-    } catch (Exception e) {
-        System.err.println("Object construction error: " + e);
-        System.exit(1);
-    }
-}
-
+include::extras/example-TransactionalQueue.java[]
 ----
 ====
 
@@ -107,216 +53,81 @@ If this is successful the atomic action can be committed, otherwise it is aborte
 
 The finalizer of the `queue` class is only required to call the `terminate` and `finalizer` operations of `LockManager`.
 
-====
-[source,Java]
+[source,java]
 ----
-public void finalize () {
-    super.terminate();
-    super.finalize();
-}
+include::extras/example_queue_destructor.java[]
 ----
-====
 
-=== Required methods
+== Required methods
 
-==== `save_state`, `restore_state`, and `type`
+=== `save_state`, `restore_state`, and `type`
 
 .Method `save_state`
 ====
-[source,Java]
+[source,java]
 ----
-public boolean save_state (OutputObjectState os, int ObjectType) {
-    if (!super.save_state(os, ObjectType))
-        return false;
-
-    try {
-        os.packInt(numberOfElements);
-
-        if (numberOfElements > 0)
-            {
-                for (int i = 0; i < numberOfElements; i++)
-                    os.packInt(elements[i]);
-            }
-
-        return true;
-    } catch (IOException e) {
-        return false;
-    }
-}
-
+include::extras/example-queue_save_state.java[]
 ----
 ====
 
 .Method `restore_state`
 ====
-[source,Java]
+[source,java]
 ----
-public boolean restore_state (InputObjectState os, int ObjectType) {
-    if (!super.restore_state(os, ObjectType))
-        return false;
-
-    try {
-        numberOfElements = os.unpackInt();
-
-        if (numberOfElements > 0)
-            {
-                for (int i = 0; i < numberOfElements; i++)
-                    elements[i] = os.unpackInt();
-            }
-
-        return true;
-    } catch (IOException e) {
-        return false;
-    }
-}
-
+include::extras/example-queue_restore_state.java[]
 ----
 ====
-
-Because the Queue class is derived from the LockManager class, the operation type should be:
 
 .Method `type`
 ====
 Because the Queue class is derived from the LockManager class, the operation type should be:
 
-[source,Java]
+[source,java]
 ----
-public String type () {
-    return "/StateManager/LockManager/TransactionalQueue";
-}
-
+include::extras/example-queue_type.java[]
 ----
 ====
 
-==== `enqueue` and `dequeue` methods
+=== `enqueue`and `dequeue` methods
 
 If the operations of the `queue` class are to be coded as atomic actions, then the enqueue operation might have the structure given below.
 The `dequeue` operation is similarly structured, but is not implemented here.
 
-Method `enqueue`
+.Method `enqueue`
 ====
-[source,Java]
+[source,java]
 ----
-public void enqueue (int v) throws OverFlow, UnderFlow, QueueError {
-    AtomicAction A = new AtomicAction();
-    boolean res = false;
-
-    try {
-        A.begin(0);
-
-        if (setlock(new Lock(LockMode.WRITE), 0) == LockResult.GRANTED) {
-            if (numberOfElements < QUEUE_SIZE) {
-                elements[numberOfElements] = v;
-                numberOfElements++;
-                res = true;
-            } else {
-                A.rollback();
-                throw new UnderFlow();
-            }
-        }
-
-        if (res)
-            A.commit(true);
-        else {
-            A.rollback();
-            throw new Conflict();
-        }
-    } catch (Exception e1) {
-        throw new QueueError();
-    }
-}
+include::extras/example-queue_enqueue.java[]
 ----
 ====
 
-==== `queueSize` method
+=== `queueSize` method
 
 .Method `queueSize`
 ====
-[source,Java]
+[source,java]
 ----
-public int queueSize () throws QueueError, Conflict
-{
-    AtomicAction A = new AtomicAction();
-    int size = -1;
-
-    try {
-        A.begin(0);
-
-        if (setlock(new Lock(LockMode.READ), 0) == LockResult.GRANTED)
-            size = numberOfElements;
-
-        if (size != -1)
-            A.commit(true);
-        else {
-            A.rollback();
-
-            throw new Conflict();
-        }
-    } catch (Exception e1) {
-        throw new QueueError();
-    }
-
-    return size;
-}
-
+include::extras/example-queue_queueSize.java[]
 ----
 ====
 
-==== `inspectValue` and `setValue` methods
+=== `inspectValue` and `setValue` methods
 
 [NOTE]
 ====
-The `setValue` method is not implemented here, but is similar in structure to link:#example_queue-inspectValue[`inspectValue`].
+The `setValue` method is not implemented here, but is similar in structure to <<example_queue_inspectvalue>> .
 ====
 
+[#example_queue_inspectvalue]
 .Method `inspectValue`
-[#example_queue-inspectValue]
 ====
-[source,Java]
+[source,java]
 ----
-public int inspectValue (int index) throws UnderFlow, OverFlow, Conflict, QueueError
-{
-    AtomicAction A = new AtomicAction();
-    boolean res = false;
-    int val = -1;
-
-    try {
-        A.begin();
-
-        if (setlock(new Lock(LockMode.READ), 0) == LockResult.GRANTED) {
-            if (index < 0) {
-                A.rollback();
-                throw new UnderFlow();
-            } else {
-                // array is 0 - numberOfElements -1
-
-                if (index > numberOfElements -1) {
-                    A.rollback();
-                    throw new OverFlow();
-                } else {
-                    val = elements[index];
-                    res = true;
-                }
-            }
-        }
-
-        if (res)
-            A.commit(true);
-        else {
-            A.rollback();
-            throw new Conflict();
-        }
-    } catch (Exception e1) {
-        throw new QueueError();
-    }
-
-    return val;
-}
-
+include::extras/example-queue_inspectValue.java[]
 ----
 ====
 
-=== The client
+== The client
 
 Rather than show all of the code for the client, this example concentrates on a representative portion.
 Before invoking operations on the object, the client must first bind to the object.
@@ -324,43 +135,19 @@ In the local case this simply requires the client to create an instance of the o
 
 .Binding to the Object
 ====
-[source,Java]
+[source,java]
 ----
- public static void main (String[] args) {
-    TransactionalQueue myQueue = new TransactionalQueue();
-    // Before invoking one of the queue’s operations, the client starts a transaction. The queueSize operation is shown below:
-    AtomicAction A = new AtomicAction();
-    int size = 0;
-
-    try {
-        A.begin(0);
-
-        try {
-            size = queue.queueSize();
-        } catch (Exception e) {
-        }
-
-        if (size >= 0) {
-            A.commit(true);
-
-            System.out.println("Size of queue: " + size);
-        } else
-            A.rollback();
-    } catch (Exception e) {
-        System.err.println("Caught unexpected exception!");
-    }
-}
-
+include::extras/example-queue_main.java[]
 ----
 ====
 
-=== Comments
+== Comments
 
-Since the `queue` object is persistent, the state of the object survives any failures of the node on which it is located.
+Since the _queue_ object is persistent, the state of the object survives any failures of the node on which it is located.
 The state of the object that survives is the state produced by the last top-level committed atomic action performed on the object.
 If an application intends to perform two `enqueue` operations atomically, for example, you can nest the `enqueue` operations in another enclosing atomic action.
 In addition, concurrent operations on such a persistent object are serialized, preventing inconsistencies in the state of the object.
 
-However, since the elements of the `queue` objects are not individually concurrency controlled, certain combinations of concurrent operation invocations are executed serially, even though logically they could be executed concurrently.
+However, since the elements of the _queue_ objects are not individually concurrency controlled, certain combinations of concurrent operation invocations are executed serially, even though logically they could be executed concurrently.
 An example of this is modifying the states of two different elements in the queue.
 The platform Development Guide addresses some of these issues.
