--- a/src/asciidoc/project/core/general_transaction_issues.adoc
+++ b/src/asciidoc/project/core/general_transaction_issues.adoc
@@ -1,10 +1,10 @@
-== Advanced transaction issues with ArjunaCore
+= Advanced transaction issues with ArjunaCore
 
 Atomic actions (transactions) can be used by both application programmers and class developers.
 Thus, entire operations (or parts of operations) can be made atomic as required by the semantics of a particular operation.
 This chapter will describe some of the more subtle issues involved with using transactions in general and ArjunaCore in particular.
 
-=== Last resource commit optimization (LRCO)
+== Last resource commit optimization (LRCO)
 
 In some cases it may be necessary to enlist participants that are not two-phase commit aware into a two-phase commit transaction.
 If there is only a single resource then there is no need for two-phase commit.
@@ -12,36 +12,22 @@ However, if there are multiple resources in the transaction, the _Last Resource 
 It is possible for a single resource that is one-phase aware (i.e., can only commit or roll back, with no prepare), to be enlisted in a transaction with two-phase commit aware resources.
 This feature is implemented by logging the decision to commit after committing the one-phase aware participant: The coordinator asks each two-phase aware participant if they are able to prepare and if they all vote yes then the one-phase aware participant is asked to commit.
 If the one-phase aware participant commits successfully then the decision to commit is logged and then commit is called on each two-phase aware participant.
-A heuristic outcome will occur if the coordinator fails before logging its commit decision but after the one-phase participant has committed since each two-phase aware participant will eventually rollback (as required under presumed `abort` semantics).
+A heuristic outcome will occur if the coordinator fails before logging its commit decision but after the one-phase participant has committed since each two-phase aware participant will eventually rollback (as required under _presumed `abort`_ semantics).
 This strategy delays the logging of the decision to commit so that in failure scenarios we have avoided a write operation.
 But this choice does mean that there is no record in the system of the fact that a heuristic outcome has occurred.
 
 In order to utilize the LRCO, your participant must implement the `com.arjuna.ats.arjuna.coordinator.OnePhase` interface and be registered with the transaction through the `BasicAction.add` operation.
-Since this operation expects instances of `AbstractRecord` , you must create an instance of `com.arjuna.ats.arjuna.LastResourceRecord` and give your participant as the constructor parameter.
+Since this operation expects instances of `AbstractRecord`, you must create an instance of `com.arjuna.ats.arjuna.LastResourceRecord` and give your participant as the constructor parameter.
 
 ====
 .Class `com.arjuna.ats.arjuna.LastResourceRecord`
 [source,Java]
 ----
-try {
-    boolean success = false;
-    AtomicAction A = new AtomicAction();
-    // used OnePhase interface
-    OnePhase opRes = new OnePhase();
-
-    System.out.println("Starting top-level action.");
-
-    A.begin();
-    A.add(new LastResourceRecord(opRes));
-    A.add("other participants");
-
-    A.commit();
-}
-
+include::extras/LastResourceRecord.java[]
 ----
 ====
 
-=== Heuristic outcomes
+== Heuristic outcomes
 
 In some situations the application thread may not want to be informed of heuristics during completion.
 However, it is possible some other component in the application, thread or admin may still want to be informed.
@@ -51,7 +37,7 @@ We do not dictate a specific implementation for what these participants do with 
 To use this capability, create classes derived from the HeuristicNotification class and define the heuristicOutcome method to use whatever mechanism makes sense for your application.
 Instances of this class should be registered with the tranasction as Synchronizations.
 
-=== Nested transactions
+== Nested transactions
 
 There are no special constructs for nesting of transactions.
 If an action is begun while another action is running then it is automatically nested.
@@ -66,7 +52,7 @@ If the top-level action aborts then all of the work will be undone.
 The committing or aborting of a nested action does not automatically affect the outcome of the action within which it is nested.
 This is application dependent, and allows a programmer to structure atomic actions to contain faults, undo work, etc.
 
-=== Asynchronously committing a transaction
+== Asynchronously committing a transaction
 
 By default, the Transaction Service executes the `commit` protocol of a top-level transaction in a synchronous manner.
 All registered resources will be told to prepare in order by a single thread, and then they will be told to commit or rollback.
@@ -85,7 +71,7 @@ By setting the `CoordinatorEnvironmentBean.asyncPrepare` environment variable to
 By setting `CoordinatorEnvironmentBean.asyncCommit` to `YES`, a separate thread will be created to complete the second phase of the transaction provided knowledge about heuristics outcomes is not required.
 By setting the `CoordinatorEnvironmentBean.asyncAfterSynchronization` environment variable to `YES`, during the `afterSynchronization` phase a separate thread will be created for each synchronization registered with the transaction provided knowledge about heuristics outcomes is not required.
 
-=== Independent top-level transactions
+== Independent top-level transactions
 
 In addition to normal top-level and nested atomic actions, ArjunaCore also supports independent top-level actions, which can be used to relax strict serializability in a controlled manner.
 An independent top-level action can be executed from anywhere within another atomic action and behaves exactly like a normal top-level action.
@@ -93,7 +79,7 @@ Its results are made permanent when it commits and will not be undone if any of 
 
 .Independent Top-Level Action
 ====
-image::../images/core-independent_top_level_action.png[Independent Top-Level Action,width=600,align="center"]
+image::../images/core-independent_top_level_action.png[align="center"]
 A typical nesting of atomic actions, where action B is nested within action A.
 Although atomic action C is logically nested within action B (it had its Begin operation invoked while B was active) because it is an independent top-level action, it will commit or abort independently of the other actions within the structure.
 Because of the nature of independent top-level actions they should be used with caution and only in situations where their use has been carefully examined.
@@ -102,72 +88,36 @@ Because of the nature of independent top-level actions they should be used with 
 Top-level actions can be used within an application by declaring and using instances of the class `TopLevelTransaction`.
 They are used in exactly the same way as other transactions.
 
-=== Transactions within `save_state` and `restore_state` methods
+== Transactions within `save_state`and `restore_state`methods
 
 Exercise caution when writing the `save_state` and `restore_state` operations to ensure that no atomic actions are started, either explicitly in the operation or implicitly through use of some other operation.
 This restriction arises due to the fact that ArjunaCore may invoke `restore_state` as part of its commit processing resulting in the attempt to execute an atomic action during the commit or abort phase of another action.
 This might violate the atomicity properties of the action being committed or aborted and is thus discouraged.
 
+.
 ====
-If we consider the link:using_txcore.adoc#array-example[Array example] given previously, the `set` and `get` operations could be implemented as shown below.
+If we consider the <<_array_example>> given previously, the `set` and `get` operations could be implemented as shown below.
 
 This is a simplification of the code, ignoring error conditions and exceptions.
 
-[source,Java]
+[source,java]
 ----
-public boolean set (int index, int value) {
-   boolean result = false;
-   AtomicAction A = new AtomicAction();
-
-   A.begin();
-
-   // We need to set a WRITE lock as we want to modify the state.
-
-   if (setlock(new Lock(LockMode.WRITE), 0) == LockResult.GRANTED)
-   {
-      elements[index] = value;
-      if ((value > 0) && (index > highestIndex))
-         highestIndex = index;
-      A.commit(true);
-      result = true;
-   }
-   else
-      A.rollback();
-
-   return result;
-}
+include::extras/array_set_method.java[]
 ----
 
-[source,Java]
+[source,java]
 ----
-// assume -1 means error
-public int get (int index) {
-   AtomicAction A = new AtomicAction();
-
-   A.begin();
-
-   // We only need a READ lock as the state is unchanged.
-
-   if (setlock(new Lock(LockMode.READ), 0) == LockResult.GRANTED) {
-      A.commit(true);
-
-             return elements[index];
-   } else
-      A.rollback();
-
-   return -1;
-}
-
+include::extras/array_get_method.java[]
 ----
 ====
 
-=== Garbage collecting objects
+== Garbage collecting objects
 
 Java objects are deleted when the garbage collector determines that they are no longer required.
 Deleting an object that is currently under the control of a transaction must be approached with caution since if the object is being manipulated within a transaction its fate is effectively determined by the transaction.
 Therefore, regardless of the references to a transactional object maintained by an application, ArjunaCore will always retain its own references to ensure that the object is not garbage collected until after any transaction has terminated.
 
-=== Transaction timeouts
+== Transaction timeouts
 
 By default, transactions live until they are terminated by the application that created them or a failure occurs.
 However, it is possible to set a timeout (in seconds) on a per-transaction basis such that if the transaction has not terminated before the timeout expires it will be automatically rolled back.
@@ -204,7 +154,7 @@ This default timeout can be overridden by setting the `CoordinatorEnvironmentBea
 As of JBoss Transaction Service 4.5, transaction timeouts have been unified across all transaction components and are controlled by ArjunaCore.
 ====
 
-==== Monitoring transaction timeouts
+=== Monitoring transaction timeouts
 
 If you want to be informed when a transaction is rolled back or forced into a rollback-only mode by the reaper, you can create a class that inherits from class `com.arjuna.ats.arjuna.coordinator.listener.ReaperMonitor` and overrides the `rolledBack` and `markedRollbackOnly` methods.
 When registered with the reaper via the `TransactionReaper.addListener` method, the reaper will invoke one of these methods depending upon how it tries to terminate the transaction.
