--- a/src/asciidoc/project/core/overview.adoc
+++ b/src/asciidoc/project/core/overview.adoc
@@ -1,4 +1,4 @@
-== Overview
+= Overview
 
 A transaction is a unit of work that encapsulates multiple database actions such that either all the encapsulated actions fail or all succeed.
 
@@ -9,14 +9,14 @@ The classes mentioned in this chapter are the key to writing fault-tolerant appl
 Thus, they are described and then applied in the construction of a simple application.
 The classes to be described in this chapter can be found in the `com.arjuna.ats.txoj` and `com.arjuna.ats.arjuna` packages.
 
-[NOTE]
 .Stand-Alone Transaction Manager
+[NOTE]
 ====
 Although {productName} can be embedded in various containers, such as {appServer}, it remains a stand-alone transaction manager as well.
 There are no dependencies between the core {productName} and any container implementations.
 ====
 
-=== ArjunaCore
+== ArjunaCore: The Transaction Engine
 
 In keeping with the object-oriented view, the mechanisms needed to construct reliable distributed applications are presented to programmers in an object-oriented manner.
 Some mechanisms need to be inherited, for example, concurrency control and state management.
@@ -29,22 +29,21 @@ If this is not the case then the programmer is responsible for all of these issu
 ====
 
 ArjunaCore exploits object-oriented techniques to present programmers with a toolkit of Java classes from which application classes can inherit to obtain desired properties, such as persistence and concurrency control.
-These classes form a hierarchy, part of which is shown in link:#txcore_class_hierarchy[ArjunaCore Class Hierarchy] and which will be described later in this document.
+These classes form a hierarchy, part of which is shown in <<_txcore_class_hierarchy>> and which will be described later in this document.
 
+[[_txcore_class_hierarchy]]
 .ArjunaCore Class Hierarchy
-====
-[#txcore_class_hierarchy]
-image::../images/core-txcore_class_hierarchy.png[ArjunaCore Class Hierarchy,width=800, align="center"]
-====
+image::../images/core-txcore_class_hierarchy.png[align="center"]
 
 Apart from specifying the scopes of transactions, and setting appropriate locks within objects, the application programmer does not have any other responsibilities: _ArjunaCore_ and _TXOJ_ guarantee that transactional objects will be registered with, and be driven by, the appropriate transactions, and crash recovery mechanisms are invoked automatically in the event of failures.
 
-=== Saving object states
+== Saving object states
 
 ArjunaCore needs to be able to remember the state of an object for several purposes.
 
 recovery::
 The state represents some past state of the object.
+
 persistence::
 The state represents the final state of an object at application termination.
 
@@ -54,7 +53,7 @@ This buffer is automatically resized as required should it have insufficient spa
 The instances are all stored in the buffer in a standard form called _network byte order_, making them machine independent.
 Any other architecture-independent format, such as XDR or ASN.1, can be implemented simply by replacing the operations with ones appropriate to the encoding required.
 
-=== The object store
+== The object store
 
 Implementations of persistence can be affected by restrictions imposed by the Java SecurityManager.
 Therefore, the object store provided with ArjunaCore is implemented using the techniques of interface and implementation.
@@ -64,28 +63,16 @@ Persistent objects are assigned unique identifiers, which are instances of the `
 These identifiers are used to identify them within the object store.
 States are read using the `read_committed` operation and written by the `write_committed` and `write_uncommitted` operations.
 
-=== Recovery and persistence
+== Recovery and persistence
 
-At the root of the class hierarchy is the class `StateManager` . `StateManager` is responsible for object activation and deactivation, as well as object recovery.
+At the root of the class hierarchy is the class `StateManager`. `StateManager` is responsible for object activation and deactivation, as well as object recovery.
+Refer to <<_statemanager_signature>> for the simplified signature of the class.
 
 .Simplified signature of the `StateManager` class
 ====
 [source,java]
 ----
-public abstract class StateManager {
-    public boolean activate ();
-    public boolean deactivate (boolean commit);
-
-    public Uid get_uid (); // object’s identifier.
-
-    // methods to be provided by a derived class
-
-    public boolean restore_state (InputObjectState os);
-    public boolean save_state (OutputObjectState os);
-
-    protected StateManager ();
-    protected StateManager (Uid id);
-}
+include::extras/StateManager-signature.java[]
 ----
 ====
 
@@ -94,12 +81,14 @@ Objects are assumed to be of three possible flavors.
 Recoverable::
 `StateManager` attempts to generate and maintain appropriate recovery information for the object.
 Such objects have lifetimes that do not exceed the application program that creates them.
+
 Recoverable and Persistent::
 The lifetime of the object is assumed to be greater than that of the creating or accessing application, so that in addition to maintaining recovery information, `StateManager` attempts to automatically load or unload any existing persistent state for the object by calling the `activate` or `deactivate` operation at appropriate times.
+
 Neither Recoverable nor Persistent::
 No recovery information is ever kept, nor is object activation or deactivation ever automatically attempted.
 
-If an object is `recoverable` or `recoverable and persistent` , then `StateManager` invokes the operations `save_state` while performing `deactivate`, and `restore_state` while performing `activate` at various points during the execution of the application.
+If an object is `recoverable` or `recoverable and persistent`, then `StateManager` invokes the operations `save_state` while performing `deactivate`, and `restore_state` while performing `activate` at various points during the execution of the application.
 These operations must be implemented by the programmer since `StateManager` cannot detect user-level state changes.
 //(We are examining the automatic generation of default save_state and restore_state operations, allowing the programmer to override this when application specific knowledge can be used to improve efficiency.)
 This gives the programmer the ability to decide which parts of an object’s state should be made persistent.
@@ -108,26 +97,9 @@ The `save_state` implementation for a class `Example` that has integer member va
 
 .`save_state` Implementation
 ====
-[source,Java]
+[source,java]
 ----
-public boolean save_state(OutputObjectState o) {
-    if (!super.save_state(o))
-        return false;
-
-    try
-        {
-            o.packInt(A);
-            o.packInt(B);
-            o.packInt(C);
-}
-catch (Exception e)
-    {
-        return false;
-    }
-
-return true;
-}
-
+include::extras/example-save_state.java[]
 ----
 ====
 
@@ -137,29 +109,21 @@ it is necessary for all `save_state` and `restore_state` methods to call `super.
 This is to cater for improvements in the crash recovery mechanisms.
 ====
 
-=== The life cycle of a Transactional Object for Java
+== The life cycle of a Transactional Object for Java
 
 A persistent object not in use is assumed to be held in a passive state, with its state residing in an object store and activated on demand.
 The fundamental life cycle of a persistent object in TXOJ is shown in link:#txoj-lifecycle[Life cycle of a persistent Object in TXOJ] .
 
-====
-[#txoj-lifecycle]
-image::../images/core-txoj-lifecycle.png[Life cycle of a persistent Object in TXOJ,height=1000,align="center"]
-
-* The object is initially passive, and is stored in the object store as an instance of the class `OutputObjectState`
-* When required by an application, the object is automatically activated by reading it from the store using a `read_committed` operation and is then converted from an `InputObjectState` instance into a fully-fledged object by the `restore_state` operation of the object
-* When the application has finished with the object, it is deactivated by converting it back into an `OutputObjectState` instance using the `save_state` operation, and is then stored back into the object store as a shadow copy using `write_uncommitted`.
-This shadow copy can be committed, overwriting the previous version, using the `commit_state` operation.
-The existence of shadow copies is normally hidden from the programmer by the transaction system.
-Object deactivation normally only occurs when the top-level transaction within which the object was activated commits
-====
+[[_txoj_lifecycle]]
+.Life cycle of a persistent Object in TXOJ
+image::../images/core-txoj-lifecycle.png[align="center"]
 
 [NOTE]
 ====
 During its lifetime, a persistent object may be made active then passive many times.
 ====
 
-=== The concurrency controller
+== The concurrency controller
 
 The concurrency controller is implemented by the class `LockManager`, which provides sensible default behavior while allowing the programmer to override it if deemed necessary by the particular semantics of the class being programmed.
 As with `StateManager` and persistence, concurrency control implementations are accessed through interfaces.
@@ -167,6 +131,7 @@ As well as providing access to remote services, the current implementations of c
 
 Local disk/database implementation::
 Locks are made persistent by being written to the local file system or database.
+
 A purely local implementation::
 Locks are maintained within the memory of the virtual machine which created them.
 This implementation has better performance than when writing locks to the local disk, but objects cannot be shared between virtual machines.
@@ -174,54 +139,16 @@ Importantly, it is a basic Java object with no requirements which can be affecte
 
 The primary programmer interface to the concurrency controller is via the `setlock` operation.
 By default, the runtime system enforces strict two-phase locking following a multiple reader, single writer policy on a per-object basis.
-However, as shown in link:#txcore_class_hierarchy[ArjunaCore Class Hierarchy], by inheriting from the `Lock` class, you can provide your own lock implementations with different lock conflict rules to enable type specific concurrency control.
+However, as shown in <<_txcore_class_hierarchy>>, by inheriting from the `Lock` class, you can provide your own lock implementations with different lock conflict rules to enable type specific concurrency control.
 
 Lock acquisition is, of necessity, under programmer control, since just as `StateManager` cannot determine if an operation modifies an object, `LockManager` cannot determine if an operation requires a read or write lock.
 Lock release, however, is under control of the system and requires no further intervention by the programmer.
 This ensures that the two-phase property can be correctly maintained.
 
-.The `LockManager` class
-====
-[source,Java]
+[source,java]
 ----
-public class LockResult {
-    public static final int GRANTED;
-    public static final int REFUSED;
-    public static final int RELEASED;
-}
-
-public class ConflictType {
-    public static final int CONFLICT;
-    public static final int COMPATIBLE;
-    public static final int PRESENT;
-}
-
-public abstract class LockManager extends StateManager {
-    public static final int defaultRetry;
-    public static final int defaultTimeout;
-    public static final int waitTotalTimeout;
-
-    public final synchronized boolean releaselock (Uid lockUid);
-    public final synchronized int setlock (Lock toSet);
-    public final synchronized int setlock (Lock toSet, int retry);
-    public final synchronized int setlock (Lock toSet, int retry, int sleepTime);
-    public void print (PrintStream strm);
-    public String type ();
-    public boolean save_state (OutputObjectState os, int ObjectType);
-    public boolean restore_state (InputObjectState os, int ObjectType);
-
-    protected LockManager ();
-    protected LockManager (int ot);
-    protected LockManager (int ot, int objectModel);
-    protected LockManager (Uid storeUid);
-    protected LockManager (Uid storeUid, int ot);
-    protected LockManager (Uid storeUid, int ot, int objectModel);
-
-    protected void terminate ();
-}
-
+include::extras/LockManager_class.java[]
 ----
-====
 
 The `LockManager` class is primarily responsible for managing requests to set a lock on an object or to release a lock as appropriate.
 However, since it is derived from `StateManager`, it can also control when some of the inherited facilities are invoked.
@@ -231,41 +158,13 @@ In a similar fashion, successful lock acquisition causes `activate` to be invoke
 
 .This example class shows how to try to obtain a write lock on an object.
 ====
-[source,Java]
+[source,java]
 ----
-public class Example extends LockManager {
-    public boolean foobar ()
-    {
-        AtomicAction A = new AtomicAction;
-        boolean result = false;
-
-        A.begin();
-
-        if (setlock(new Lock(LockMode.WRITE), 0) == Lock.GRANTED)
-            {
-                /*
-                 * Do some work, and TXOJ will
-                 * guarantee ACID properties.
-                 */
-
-                // automatically aborts if fails
-
-                if (A.commit() == AtomicAction.COMMITTED)
-                    {
-                        result = true;
-                    }
-            }
-        else
-            A.rollback();
-
-        return result;
-    }
-}
-
+include::extras/Example_extends_LockManager.java[]
 ----
 ====
 
-=== The transactional protocol engine
+== The transactional protocol engine
 
 The transaction protocol engine is represented by the `AtomicAction` class, which uses `StateManager` to record sufficient information for crash recovery mechanisms to complete the transaction in the event of failures.
 It has methods for starting and terminating the transaction, and, for those situations where programmers need to implement their own resources, methods for registering them with the current transaction.
@@ -277,31 +176,9 @@ Therefore, all ArjunaCore classes are also thread-safe.
 
 .Relationships Between Activation, Termination, and Commitment
 ====
-[source,Java]
+[source,java]
 ----
-{
-    ...
-
-    /* (i) bind to "old" persistent object A */
-    O1 objct1 = new objct1(Name-A);
-
-    /* create a "new" persistent object */
-    O2 objct2 = new objct2();
-
-    /* (ii) start of atomic action */
-    OTS.current().begin();
-
-    /* (iii) object activation and invocations */
-    objct1.op(...);
-    objct2.op(...);
-
-    ...
-
-    /* (iv) tx commits & objects deactivated */
-    OTS.current().commit(true);
-}
-
-/* (v) */
+include::extras/activation_termination_commitment.java[]
 ----
 (i) Creation of bindings to persistent objects::
 This could involve the creation of stub objects and a call to remote objects.
@@ -316,7 +193,7 @@ This includes updating of the state of any modified objects in the object store.
 (v) Breaking of the previously created bindings::
 ====
 
-=== The class hierarchy
+== The class hierarchy
 
 The principal classes which make up the class hierarchy of ArjunaCore are depicted below.
 
@@ -364,19 +241,13 @@ Therefore, the body of `op1` should contain a call to the `setlock` operation of
 
 .Simple Concurrency Control
 ====
-[source,Java]
+[source,java]
 ----
-public boolean op1 (...) {
-    if (setlock (new Lock(LockMode.WRITE) == LockResult.GRANTED)) {
-        // actual state change operations follow
-        ...
-    }
-}
-
+include::extras/simple_concurrency_control.java[]
 ----
 ====
 
-==== Steps followed by the operation `setlock`
+=== Steps followed by the operation `setlock`
 
 The operation `setlock`, provided by the `LockManager` class, performs the following functions:
 
